vlib/v/parser/tests/sql_undefined_variables_in_complex_exprs.out
vlib/v/parser/tests/sql_undefined_variables_in_complex_exprs.vv:13:73: error: undefined variable: `username`
   11 | fn main() {
   12 |     _ := sql _ {
   13 |         select from User where (age > 18) && (city == 'London' || username == username)
      |                                                                               ~~~~~~~~
   14 |     }!
   15 | }
