vlib/v/parser/tests/sql_undefined_variables_in_complex_exprs.vv
module main

struct User {
mut:
	id       int    @[primary]
	username string
	age      string
	city     string
}

fn main() {
	_ := sql _ {
		select from User where (age > 18) && (city == 'London' || username == username)
	}!
}
